--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,40 +2,41 @@
 @tailwind components;
 @tailwind utilities;
 
+@font-face {
+  font-family: 'EastLane';
+  src: url('/fonts/Eastlane Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
 
 @font-face {
-  font-family: 'Airbnb Cereal';
-  src: url('/fonts/AirbnbCereal_W_Md.otf') format('opentype');
-  font-weight: 400; /* Regular */
+  font-family: 'EastLane';
+  src: url('/fonts/Eastlane Medium.ttf') format('truetype');
+  font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Airbnb Cereal';
-  src: url('/fonts/AirbnbCereal_W_Lt.otf') format('opentype');
-  font-weight: 300; /* Regular */
+  font-family: 'EastLane';
+  src: url('/fonts/Eastlane Bold.ttf') format('truetype');
+  font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
+
 @font-face {
-  font-family: 'Airbnb Cereal';
-  src: url('/fonts/AirbnbCereal_W_Bd.otf') format('opentype');
-  font-weight: 600; /* Bold */
+  font-family: 'EastLane';
+  src: url('/fonts/Eastlane Light.ttf') format('truetype');
+  font-weight: 300;
   font-style: normal;
+  font-display: swap;
 }
-@font-face {
-  font-family: 'Airbnb Cereal';
-  src: url('/fonts/AirbnbCereal_W_XBd.otf') format('opentype');
-  font-weight: 700; /* Bold */
-  font-style: normal;
-}
-@font-face {
-  font-family: 'Airbnb Cereal';
-  src: url('/fonts/AirbnbCereal_W_Blk.otf') format('opentype');
-  font-weight: 800; /* Bold */
-  font-style: normal;
-}
+
 body {
   @apply font-sans;
-  font-family: 'Airbnb Cereal', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+  font-family: 'EastLane', ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
 }
 .no-scrollbar::-webkit-scrollbar {
   height: 5px; /* Height of the scrollbar */
