Added Guide Section

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -69,7 +69,7 @@ body {
 }
 
 .blog-details h2 {
-  @apply text-dark mb-8 text-2xl font-bold dark:text-white sm:text-3xl md:text-[35px] md:leading-[1.28];
+  @apply text-dark mb-8 text-2xl font-bold dark:text-white sm:text-3xl md:text-[35px] md:leading-[1.28] mt-16;
 }
 
 .blog-details h3 {
