--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -65,3 +65,33 @@ body {
 .no-scrollbar2::-webkit-scrollbar-thumb:hover {
   background-color: #c6d769; /* Slightly darker on hover */
 }
+
+/* Custom Slider Styles */
+.slider::-webkit-slider-thumb {
+  appearance: none;
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background: #545A2B;
+  cursor: pointer;
+  border: 3px solid #DFEA96;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.slider::-moz-range-thumb {
+  height: 24px;
+  width: 24px;
+  border-radius: 50%;
+  background: #545A2B;
+  cursor: pointer;
+  border: 3px solid #DFEA96;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+.slider::-webkit-slider-track {
+  background: transparent;
+}
+
+.slider::-moz-range-track {
+  background: transparent;
+}
